WEASIS-660 - Work in progress - refactor synchronization options with global and local synchros